# tusd-bridge

./: .gitignore  .ruff.toml  AIRFLOW.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json  tasks.py
.github/workflows/: lint.yml  ruff.yml
airflow/: Dockerfile
airflow/dags/: file_post_processing.py
alembic/: env.py  script.py.mako
alembic/versions/: 3af924cc45ef_create_domain_events_and_file_list_view_.py  cef0eda28b85_create_upload_events_and_upload_.py
proto/: hook.proto
src/tusd_bridge/: airflow_client.py  database.py  event_bus.py  event_store.py  http_app.py  models.py  processing.py  projector.py  server.py
