[project]
name = "tusd-bridge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15",
    "grpclib[protobuf]>=0.4.7",
    "sqlalchemy>=2.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.66.1",
    "invoke>=2.2.0",
    "mypy-protobuf>=5.0.0",
    "pyright>=1.1.408",
    "ruff>=0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tusd_bridge"]

[project.scripts]
tusd-bridge = "tusd_bridge.server:app"
